Fix chat message text align

--- a/website/src/assets/components/_chat.scss
+++ b/website/src/assets/components/_chat.scss
@@ -87,6 +87,7 @@
         border-radius: 3px;
         padding: 3px 5px;
         margin-bottom: 5px;
+        text-align: left;
       }
     }
 
